--- a/buildspec.yml
+++ b/buildspec.yml
@@ -1,43 +1,109 @@
-# Highlights
-# parameters set correctly when triggered from webhooks (github)
-# secrets not retrieved from AWS (paid feature)
-# targets the main branch and PRs (with failed pipelines for other branches because of codebuild source filters limitations)
-# errors for scanner downloads not managed
-# no cache for analyzers (or the scanner)
 version: 0.2
 env:
-  shell: bash
-#  s
+  secrets-manager:
+    SONAR_TOKEN: prod/sonar:SONAR_TOKEN
+    SONAR_HOST_URL: prod/sonar:SONAR_HOST_URL
+  variables:
+    SourceBranch: ""
+    DestinationBranch: ""
+    PRKey: ""
+  shell: bash    
 phases:
-#  install:
-#    runtime-versions:
-#      java: corretto11
+  install:
+    runtime-versions:
+      java: corretto17
   pre_build:
     commands:
- #     - echo "CODEBUILD_SOURCE_VERSION -> ${CODEBUILD_SOURCE_VERSION}"
-#      - echo "CODEBUILD_WEBHOOK_TRIGGER -> ${CODEBUILD_WEBHOOK_TRIGGER}"
-#      - echo "CODEBUILD_WEBHOOK_BASE_REF -> ${CODEBUILD_WEBHOOK_BASE_REF}"
-#      - echo "CODEBUILD_WEBHOOK_HEAD_REF -> ${CODEBUILD_WEBHOOK_HEAD_REF}"
-#      - |-
-#        if [[ ${CODEBUILD_WEBHOOK_TRIGGER} == 'pr/'* ]] ; then
-#           export SQ_ANALYSIS_PARAMS="-Dsonar.pullrequest.key=${CODEBUILD_WEBHOOK_TRIGGER##*/} \
-#                                      -Dsonar.pullrequest.branch=${CODEBUILD_WEBHOOK_HEAD_REF##refs/heads/} \
-#                                      -Dsonar.pullrequest.base=${CODEBUILD_WEBHOOK_BASE_REF##refs/heads/}"
-#        else
-#          if [[ ${CODEBUILD_WEBHOOK_TRIGGER##branch/} != 'main' ]] ; then
-#            echo "exiting build for branch {CODEBUILD_WEBHOOK_TRIGGER}"
-#            exit 1
-#          else
-#             export SQ_ANALYSIS_PARAMS="-Dsonar.branch.name=${CODEBUILD_WEBHOOK_TRIGGER##branch/}"
-#          fi
-#        fi
-      # get the scanner
-#      - wget https://binaries.sonarsource.com/Distribution/sonar-scanner-cli/sonar-scanner-cli-4.6.2.2472.zip
-#      - unzip ./sonar-scanner-cli-4.6.2.2472.zip
-#      - export PATH=$PATH:$PWD/sonar-scanner-4.6.2.2472/bin/
-      - printenv
+      # Install aws client
+      - pip3 install --upgrade awscli
+      # Install kubectl tools
+      - curl -LO https://storage.googleapis.com/kubernetes-release/release/v1.27.0/bin/linux/amd64/kubectl
+      - chmod +x kubectl
+      - mv ./kubectl /usr/local/bin/kubectl
+      - echo "CODEBUILD_SOURCE_VERSION -> ${CODEBUILD_SOURCE_VERSION}"
+      - echo "SourceBranch -> ${SourceBranch}"
+      - echo "DestinationBranch -> ${DestinationBranch}"
+      - echo "PRKey -> ${PRKey}"
+      - ulimit -s 8192
+      
+      # Connect to Amazon ECR
+      - echo Logging in to Amazon ECR...
+      - aws ecr get-login-password --region $AWS_DEFAULT_REGION | docker login --username AWS --password-stdin $AWS_ACCOUNT_ID.dkr.ecr.$AWS_DEFAULT_REGION.amazonaws.com
+      # Update Kube config Home Directory
+      - export KUBECONFIG=$HOME/.kube/config
   build:
     commands:
-      - echo "SQ_ANALYSIS_PARAMS -> ${SQ_ANALYSIS_PARAMS}"
-#      - sonar-scanner -Dsonar.login=$SONAR_LOGIN -Dsonar.host.url=$SONAR_HOST_URL -X $SQ_ANALYSIS_PARAMS
-      - mvn clean verify sonar:sonar -X $SQ_ANALYSIS_PARAMS
+      - echo Build started on `date`
+      - set -a
+      - export CODEBUILD_SOURCE_VERSION="refs/heads/main"
+      - SourceBranch=`echo $CODEBUILD_SOURCE_VERSION | cut -d '/' -f 3`
+      - |-
+      
+        if [[ $PRKey -ne '' ]] ; then
+          echo "We are doing a PR analysis on ${SourceBranch} into ${DestinationBranch} with key ${PRKey}"
+          export SQ_ANALYSIS_PARAMS="-Dsonar.pullrequest.key=${PRKey} \
+                                      -Dsonar.pullrequest.branch=${SourceBranch##refs/heads/} \
+                                      -Dsonar.pullrequest.base=${DestinationBranch##refs/heads/}"
+        else
+          if [[ ${SourceBranch##refs/heads/} == 'main' ]] ; then
+            echo "We are doing an analysis of the main branch: ${SourceBranch}"
+            export SQ_ANALYSIS_PARAMS=""
+          else
+            echo "We are doing a branch analysis  on ${SourceBranch}"
+            export SQ_ANALYSIS_PARAMS="-Dsonar.branch.name=${SourceBranch##refs/heads/}"
+          fi
+        fi
+      # Run compile, execute sonar scanner and create application package  
+      - mvn clean compile sonar:sonar package -Dmaven.test.skip=true -Dcheckstyle.skip -Dsonar.projectKey=$SONAR_PROJECT -Dsonar.qualitygate.wait=true -Dsonar.qualitygate.timeout=120 -Dsonar.verbose=true $SQ_ANALYSIS_PARAMS
+    
+      # Success Buid Docker image
+      - echo Building the Docker image...
+      - echo Build started on `date`
+      - docker build -t $IMAGE_REPO_NAME:$IMAGE_TAG .
+      - docker tag $IMAGE_REPO_NAME:$IMAGE_TAG $AWS_ACCOUNT_ID.dkr.ecr.$AWS_DEFAULT_REGION.amazonaws.com/$IMAGE_REPO_NAME:$IMAGE_TAG
+  post_build:
+    commands:
+       - |
+         if [ "$CODEBUILD_BUILD_SUCCEEDING" = "1" ]; then
+          echo "Build succeeded. Running post-build steps..."
+          echo Build completed on `date`
+          if [[ ${PRKey} == "" ]] ; then
+           if [[ ${SourceBranch##refs/heads/} == 'main' ]] ; then
+            echo Building the Docker image...
+            echo Build started on `date`
+            docker build -t $IMAGE_REPO_NAME:$IMAGE_TAG .
+            docker tag $IMAGE_REPO_NAME:$IMAGE_TAG $AWS_ACCOUNT_ID.dkr.ecr.$AWS_DEFAULT_REGION.amazonaws.com/$IMAGE_REPO_NAME:$IMAGE_TAG
+            
+            echo Pushing the Docker images...
+            docker push $AWS_ACCOUNT_ID.dkr.ecr.$AWS_DEFAULT_REGION.amazonaws.com/$IMAGE_REPO_NAME:$IMAGE_TAG
+            # Setup kubectl with our EKS Cluster
+            mkdir ~/.kube/
+            aws eks --region $AWS_DEFAULT_REGION update-kubeconfig --name $EKS_CLUSTER_NAME
+            chmod 0600 ~/.kube/config
+            
+            # Apply changes to our Application using kubectl
+            echo "Apply changes to kube app"  
+            # Test if application is deployed
+            podStatus=$(kubectl get pods -n $EKS_NS_APP -o=jsonpath='{range .items[*]}{.status.conditions[?(@.type=="ContainersReady")].status}{"\n"}{end}')
+            if [ "$podStatus" == "True" ]; then
+              kubectl -n $EKS_NS_APP rollout restart deploy spring-demo-deploy
+            else 
+              kubectl apply -f app-k8s/
+            fi
+          
+            echo "Completed App Deployement" 
+            sleep 60
+            JAVA_APP_ENDPOINT=`kubectl -n $EKS_NS_APP get svc $EKS_CODEBUILD_APP_SVC -o jsonpath="{.status.loadBalancer.ingress[*].hostname}"`
+            echo -e "\nThe Java application can be accessed nw via http://$JAVA_APP_ENDPOINT:8080"
+           fi
+          fi
+          
+         else
+           echo "Build failed. Skipping post-build steps..."
+         fi
+         
+artifacts:
+  files:
+    - target/spring-demo-0.0.1-SNAPSHOT.jar
+    - app-k8s/*
+  discard-paths: yes
