--- a/buildspec.yml
+++ b/buildspec.yml
@@ -106,6 +106,6 @@ phases:
          
 artifacts:
   files:
-    - target/spring-demo-0.0.1-SNAPSHOT.jar
+    - target/aws-sonar-demo-1.1.jar
     - app-k8s/*
   discard-paths: yes
