--- a/app-k8s/sonar-aws-javaApp.yaml
+++ b/app-k8s/sonar-aws-javaApp.yaml
@@ -22,7 +22,7 @@ spec:
     spec:
       containers:
         - name: sonar-aws-javaapp 
-          image: 103078382956.dkr.ecr.eu-central-1.amazonaws.com/app-container-repo:Latest
+          image: xxxxx.dkr.ecr.eu-central-1.amazonaws.com/app-container-repo:Latest
           imagePullPolicy: Always
           ports:
            - containerPort: 8080
